# tcgui

./: .actrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DESIGN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  PACKAGING.md  README.md  WARP.md  ZENOH_CONFIG.md  deny.toml  nlink-response-to-tcgui-integration.md  nlink_CHANGELOG.md
.cargo/: audit.toml
.github/workflows/: quality.yml  release.yml
configs/: tcgui-acl.json5
debian/: changelog
docker/: .dockerignore  Dockerfile.backend
docs/: bandwidth-charts-plan.md  best-practices.md  container-networking-plan.md  dark-mode-plan.md  emoji-to-svg-migration.md  examples.md  iced-0.14-improvements-plan.md  improvement-plan-v2.md  improvement-plan.md  keyspace-v2-assessment.md  multi-namespace-architecture-recommendations.md  multi-namespace-event-stream-comparison.md  namespace-discovery-latency-report.md  net-shaper-hw-shaping.md  network-topology-plan.md  nlink-0.3.0-migration-report.md  nlink-0.4.0-migration-report.md  nlink-0.5.0-migration-report.md  nlink-0.6-upgrade-plan.md  nlink-0.6.0-upgrade-report.md  nlink-feature-requests.md  nlink-integration-report.md  nlink-migration-plan.md  nlink-migration-report.md  nlink-namespace-watcher-plan.md  nlink-netem-parsing-plan.md  nlink-response-analysis.md  preset-format.md  preset-implementation-plan.md  process-spawning-alternatives.md  qdisc-expansion-plan.md  rust-netlink-fork-analysis.md  scenario-format.md  tc-config-detection-fix-report.md  tc-statistics-implementation-report.md  tier4-diagnostics-plan.md  troubleshooting.md  ui-input-controls-report.md
flatpak/: com.github.p13marc.TcGui.desktop  com.github.p13marc.TcGui.metainfo.xml  com.github.p13marc.TcGui.yml
packaging/debian/backend/: postinst  postrm  prerm
packaging/debian/frontend/: postinst  postrm
packaging/desktop/: tcgui.desktop
packaging/icons/: README.md
packaging/rpm/backend/: post-install.sh  post-uninstall.sh  pre-uninstall.sh
packaging/rpm/frontend/: post-install.sh  post-uninstall.sh
packaging/sudoers/: tcgui-backend
packaging/systemd/: tcgui-backend.service
presets/: cellular-network.json5  high-latency-low-bandwidth.json5  poor-wifi.json5  satellite-link.json5  test-all.json5  unreliable-connection.json5  wan-link.json5
scenarios/: fast-degradation.json5  intermittent-connectivity.json5  load-testing.json5  mobile-degradation.json5  network-congestion.json5  quality-degradation.json5
tcgui-backend/: ARCHITECTURE.md  Cargo.toml  README.md
tcgui-backend/examples/: test_netns.rs
tcgui-backend/src/: bandwidth.rs  container.rs  diagnostics.rs  hw_shaping.rs  interfaces.rs  lib.rs  main.rs  namespace_watcher.rs  netlink_events.rs  netns.rs  network.rs  preset_loader.rs  registry.rs  tc_commands.rs  tc_commands_test.rs  tc_config.rs  tc_netlink.rs  zenoh_query.rs
tcgui-backend/src/commands/: builder.rs  mod.rs  templates.rs
tcgui-backend/src/config/: app_config.rs  cli.rs  feature_flags.rs  hot_reload.rs  mod.rs  zenoh_config.rs
tcgui-backend/src/scenario/: execution.rs  loader.rs  manager.rs  mod.rs  storage.rs  templates.rs  zenoh_handlers.rs
tcgui-backend/src/services/: bandwidth_service.rs  mod.rs  network_service.rs  tc_service.rs
tcgui-backend/src/utils/: error_handling.rs  mod.rs  service_resilience.rs
tcgui-backend/tests/: config_integration_tests.rs  integration_tests.rs  keyspace_v2_acceptance.rs  regression_tests.rs  service_resilience_integration_tests.rs
tcgui-frontend/: Cargo.toml  README.md
tcgui-frontend/src/: app.rs  backend_manager.rs  bandwidth_chart.rs  bandwidth_history.rs  icons.rs  interface_selector.rs  lib.rs  main.rs  message_handlers.rs  messages.rs  query_manager.rs  scenario_manager.rs  scenario_view.rs  settings.rs  table_view.rs  theme.rs  ui_state.rs  view.rs  zenoh_manager.rs
tcgui-frontend/src/interface/: base.rs  messages.rs  mod.rs  slider_input.rs  state.rs  value_input.rs
tcgui-frontend/src/interface/display/: bandwidth.rs  mod.rs  status.rs
tcgui-frontend/src/interface/preset/: manager.rs  mod.rs
tcgui-shared/: Cargo.toml  build.rs
tcgui-shared/registry/: tc.toml  types.toml
tcgui-shared/src/: errors.rs  identity.rs  lib.rs  preset_json.rs  presets.rs  registry.rs  scenario.rs  scenario_json.rs  validation.rs
