[package]
name = "tcgui-shared"
version.workspace = true
edition = "2024"
description = "Shared types and utilities for tcgui frontend and backend"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = "0.4"
thiserror = { workspace = true }
anyhow = { workspace = true }
nlink = { workspace = true }
duration-string = "0.4"
